# cell-model

./: CMakeLists.txt  autobuild.sh  build_run.sh  job_script.sh  main.py  run.py  simulate_job.sh  test_job.sh  vis.py
experiment/conf/: example.json
experiment/job/: base_job.sh  test_job.sh
experiment/paper/conf/intervention/: chemical.json  chemical_interval.json  light.json  temperature.json
experiment/paper/conf/runtime/: environment_size.json
experiment/paper/conf/runtime/cell_size/: cell_size.json
experiment/paper/conf/standard/: chem_density.json  initial_cell_density.json  light_intensity.json  temperature.json
phoenix/: cpp_job_script.sh  job_script.sh  phoenix.txt
src/: cell.cpp  cell.h  cell_model.cu  cell_model.cuh  cell_model_params.h  cuda_util.h  grid_element.h  main.cpp
src/cell/: movement.cu  movement.cuh
src/cpp/: main.cu
src/model/: cell_model.cu  cell_model.cuh  cell_model_driver.cpp  cell_model_driver.cu  cell_model_driver.h  grid_element.h
src/model/operation/: growth.cu  growth.cuh  movement.cu  movement.cuh  resources.cu  resources.cuh  util.cu  util.cuh
src/model/output/: statistics.cpp  statistics.cu  statistics.cuh  statistics.h  video.cpp  video.cu  video.h
src/model/param/: intervention.cpp  intervention.cu  intervention.h  simulation_parameters.cpp  simulation_parameters.cu  simulation_parameters.h
src/param/: SimulationParameters.cpp  SimulationParameters.h
src/python/: main.py
src/python/util/: save_video.py
util/: save_video.py
